# trotter-symmetries-vt

./: binary_symp.py  matrix_comp.py
package/: pyproject.toml
package/quantum_dynamics/: pyproject.toml
package/quantum_dynamics/scripts/: h2_Noperator.py  h2_iizi.py
package/quantum_dynamics/src/quantum_evolution/: observables.py  qdrift.py
package/quantum_dynamics/src/quantum_evolution.egg-info/: requires.txt
package/scripts/: test.py
package/src/quantum_evolution/: hamiltonians.py  observables.py  qdrift.py  trotter.py
package/src/quantum_evolution.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quantum_dynamics/scripts/: h2_N_symmetry.py  h2_Noperator.py  h2_plots.py  h3_plots.py  h4_plots.py  shotComparison_plots.py  tempCodeRunnerFile.py  test.py  trotterStepComparison_plots.py
quantum_dynamics/src/quantum_evolution/: hamiltonians.py  observables.py  qdrift.py  trotter.py
quantum_dynamics/src/quantum_evolution.egg-info/: PKG-INFO  SOURCES.txt
